--- a/index.ipynb
+++ b/index.ipynb
@@ -158,11 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fd5bbfac3b0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create table here"
+    "# create table here\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('pet_database.db')\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "cursor.execute('''Create Table cat(id INTEGER PRIMARY KEY, name TEXT, age INTEGER);''')"
    ]
   },
   {
@@ -252,11 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fd5bbfac3b0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# alter table here"
+    "# alter table here\n",
+    "cursor.execute('''ALTER TABLE cats ADD COLUMN breed TEXT''')"
    ]
   },
   {
@@ -268,11 +296,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('table',\n",
+       "  'cats',\n",
+       "  'cats',\n",
+       "  2,\n",
+       "  'CREATE TABLE cats(id INTEGER PRIMARY KEY, name TEXT, age INTEGER, breed TEXT)'),\n",
+       " ('table',\n",
+       "  'cat',\n",
+       "  'cat',\n",
+       "  3,\n",
+       "  'CREATE TABLE cat(id INTEGER PRIMARY KEY, name TEXT, age INTEGER)')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# check schema here"
+    "# check schema here\n",
+    "cursor.execute('''SELECT * FROM sqlite_master WHERE type='table';''').fetchall()\n"
    ]
   },
   {
@@ -324,7 +373,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop table here"
+    "# drop table here\n",
+    "cursor.execute('''DROP TABLE ''')"
    ]
   },
   {
@@ -353,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
